--- a/saucisse.html
+++ b/saucisse.html
@@ -4,8 +4,9 @@
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
   <meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0" />
-  <title>R Saucisse</title>
+  <title>You RSS</title>
   <link rel="stylesheet" href="style.css" type="text/css">
+  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
   <script src="https://unpkg.com/vue"></script>
 </head>
 <body class="noselect">
