--- a/saucisse.html
+++ b/saucisse.html
@@ -3,7 +3,7 @@
 <head>
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
-  <meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0" />
+  <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0" />
   <title>SoRSSery</title>
   <link rel="stylesheet" href="style.css" type="text/css">
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
